--- a/index.html
+++ b/index.html
@@ -3,17 +3,45 @@
 <head>
 <meta charset="utf-8">
 <title>static.land</title>
+<link href="/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<h1>staticland</h1>
-<p>A home for your static sites.</p>
-<h2>Features</h2>
-<ul>
-  <li>One command to deploy a site.</li>
-  <li>Automatic SSL using Let's Encrypt.</li>
-  <li>Use any static site generator.</li>
-  <li>MIT licensed. Host it yourself. Use it how you want.</li>
-</ul>
-<p><a href="https://github.com/staticland">staticland on github</a></p>
+<div id="tv"></div>
+<main role="main" class="site-main">
+  <h1>staticland</h1>
+  <p>A home for your static sites.</p>
+  <h2>Features</h2>
+  <ul>
+    <li>One command to deploy a site.</li>
+    <li>Automatic SSL using Let's Encrypt.</li>
+    <li>Use any static site generator.</li>
+    <li>Host it yourself. Use it how you want.</li>
+    <p><a href="https://github.com/staticland">staticland on github</a></p>
+  </ul>
+  <h2>Usage</h2>
+  <p><b>Login once:</b></p>
+  <p><pre>
+    staticland login \
+      --email wat@static.land \
+      --password thisisnotapassword \
+      --server https://api.static.land
+  </pre></p>
+  <p><b>One command to deploy a site with SSL:</p></b>
+  <p><pre>
+    staticland deploy \
+      --source /path/to/site \
+      --domain example.com
+  </pre></p>
+  <h2>Get started</h2>
+  <p>The static.land hosted service is currently in a closed beta.</p>
+  <p><b>This gives you two options:</b></p>
+  <ul>
+    <li><b>Hire us</b> to set up a staticland server for you, including any unique needs you have for your use case.</li>
+    <li>Use the <b>open source code</b> to host a staticland server yourself. <a href="https://github.com/staticland">github.com/staticland</a></li>
+  </ul>
+  <h2>Contact</h2>
+  <p>Email: hi@static.land</p>
+</main>
+<script src="/bundle.js"></script>
 </body>
 </html>
