--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="tv"></div>
 <main role="main" class="site-main">
   <h1>staticland</h1>
-  <p>A home for your static sites.</p>
+  <p>A secure home for your static sites.</p>
   <h2>Features</h2>
   <ul>
     <li>One command to deploy a site.</li>
