--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <p><a href="https://github.com/staticland">staticland on github</a></p>
   </ul>
   <h2>Usage</h2>
-  <p><b>Login once:</b></p>
+  <p><b>Create an account on a staticland server:</b></p>
   <p><pre>
-    staticland login \
+    staticland register \
       --email wat@static.land \
       --password thisisnotapassword \
-      --server https://api.static.land
+      --server your.staticlandserver.com
   </pre></p>
   <p><b>One command to deploy a site with SSL:</p></b>
   <p><pre>
