--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
 <div id="tv"></div>
 <main role="main" class="site-main">
+
   <h1>staticland</h1>
   <p>A secure home for your static sites.</p>
+
   <h2>Features</h2>
   <ul>
     <li>One command to deploy a site.</li>
@@ -18,23 +20,46 @@
     <li>Host it yourself. Use it how you want.</li>
     <p><a href="https://github.com/staticland">staticland on github</a></p>
   </ul>
+
   <h2>Usage</h2>
-  <p><b>Create an account on a staticland server:</b></p>
+  <p><b>Create an account::</b></p>
+
+  <p>
+    <pre>
+      staticland register
+    </pre>
+  </p>
+
+  <p>
+    Use <code>--server yourstaticlandserver.com</code> to use a <a href="https://github.com/staticland/staticland-api">custom server</a>.
+  </p>
+
+  <p>
+    Ensure that your domain's DNS settings are pointing at `52.39.104.182` (or the IP address of your custom server) before deploying:
+  </p>
+
   <p><pre>
-    staticland register \
-      --email wat@static.land \
-      --password thisisnotapassword \
-      --server your.staticlandserver.com
+    host static.land
+    static.land has address 52.39.104.182
   </pre></p>
-  <p><b>One command to deploy a site with SSL:</p></b>
-  <p><pre>
-    staticland deploy \
-      --source /path/to/site \
-      --domain example.com
-  </pre></p>
-  <h2>Get started</h2>
-  <p>The static.land hosted service is currently in a closed beta.</p>
-  <p><b>This gives you two options:</b></p>
+
+  <p>
+    Setting the DNS before deploying is required for Let's Encrypt to successfully provision a certificate.
+  </p>
+
+  <p>
+    <b>Deploy a site with auto-SSL:</b>
+  </p>
+
+  <p>
+    <pre>
+      staticland site/ example.com
+    </pre>
+  </p>
+
+  <h2>Advanced usage</h2>
+  <p>The static.land hosted service is limited. You can publish static sites with automatic SSL provisioned via <a href="https://letsencrypt.org/">Let's Encrypt</a>. That's it.</p>
+  <p><b>Need more features or a private, managed server, or advanced integration with existing systems? You have two options:</b></p>
   <ul>
     <li><b>Hire us</b> to set up a staticland server for you, including any unique needs you have for your use case.</li>
     <li>Use the <b>open source code</b> to host a staticland server yourself. <a href="https://github.com/staticland">github.com/staticland</a></li>
