--- a/index.html
+++ b/index.html
@@ -32,16 +32,21 @@
     </div>
 
     <!-- <p><a href="https://docs.static.land">Read the staticland documentation & start publishing!</a></p> -->
+  </div>
+  <div class="bg-green">
+    <div class="mh5 pa4 mw8 mt6 w-80 m-auto">
+      <h2 class="f-subheadline f3 fw3">Features</h2>
+      <ul>
+        <li>One command to deploy a site.</li>
+        <li>Automatic SSL using Let's Encrypt.</li>
+        <li>Use a 200.html file for HTML5 pushstate support.</li>
+        <li>Use any static site generator.</li>
+        <li>Host it yourself. Use it how you want.</li>
+      </ul>
+    </div>
+  </div>
 
-    <h2 class="f-subheadline f3 fw3 mt5">Features</h2>
-    <ul>
-      <li>One command to deploy a site.</li>
-      <li>Automatic SSL using Let's Encrypt.</li>
-      <li>Use a 200.html file for HTML5 pushstate support.</li>
-      <li>Use any static site generator.</li>
-      <li>Host it yourself. Use it how you want.</li>
-    </ul>
-
+  <div class="mh5 pa4 mw8 w-80 m-auto">
     <h2 class="f-subheadline f3 fw3 mt5">Usage</h2>
     <h3 class="f-subheadline f4 fw3 mt5">Create an account:</h3>
 
