--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <p>The static.land hosted service is limited. You can publish static sites with automatic SSL provisioned via <a href="https://letsencrypt.org/">Let's Encrypt</a>. That's it.</p>
     <p class="f-subheadline f4 fw3 mt4 measure white"><b>Need more features, a private, managed server, or advanced integration with existing systems? You have two options:</b></p>
     <ul>
-      <li><b><a href="mailto:hi@static.land">Hire us</a></b> to set up a staticland server for you, including any unique needs you have for your use case.</li>
+      <li><b><a href="mailto:hi@static.land">Hire us</a></b> to set up an internal static site deployment system that fits your use case.</li>
       <li>Use the <b>open source code</b> to host a staticland server yourself. <a href="https://github.com/staticland">github.com/staticland</a></li>
     </ul>
     <h2 class="f-subheadline f3 fw3 mt5">Contact</h2>
