--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </div>
 
   <div class="container m-auto">
-    <h2 class="f-headline f1 fw3 gray mb3 measure">staticland</h2>
-    <h3 class="f-subheadline f4 gray fw3">Static sites with free, automatic SSL for custom domains.</h3>
+    <h3 class="f-headline f1 dark-gray fw3">Static sites with free, automatic SSL for custom domains.</h3>
     <div class="code ph4 pv2 mv3 bg-black-80 near-white">
       <pre>npm install --global staticland</pre>
       <pre>staticland register</pre>
