--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
   <div class="container m-auto">
     <nav class="dt w-100 w-center">
     <div class="dib pv3">
-      <a class="f3 fw3 mt0 c-red dark-gray no-underline hover-black dn dib-ns pv2" href="https://static.land">staticland</a>
+      <a class="f3 fw3 mt0 c-red dark-gray no-underline hover-black pv2" href="https://static.land">staticland</a>
     </div>
     <div class="dtc v-mid tr pa3">
       <!-- <a class="f6 fw4 hover-black no-underline dark-gray dn dib-ns pv2 ph3 hvr-border-gray" href="https://docs.static.land/get-started" >Get started</a> -->
       <!-- <a class="f6 fw4 hover-black no-underline dark-gray dn dib-ns pv2 ph3 hvr-border-gray" href="https://docs.static.land" >Docs</a> -->
-      <a class="f6 fw4 hover-black no-underline dark-gray dn dib-ns pv2 ph3 hvr-border-gray" href="https://github.com/staticland" >Github</a>
+      <a class="f6 fw4 hover-black no-underline dark-gray pv2 ph3 hvr-border-gray" href="https://github.com/staticland" >Github</a>
     </div>
   </nav>
   </div>
 
   <div class="container m-auto">
-    <h3 class="f-headline f1 dark-gray fw3">Static sites with free, automatic SSL for custom domains.</h3>
+    <h3 class="f-headline f3 f1-ns dark-gray fw3">Static sites with free, automatic SSL for custom domains.</h3>
     <div class="code ph4 pv2 mv3 bg-black-80 near-white">
       <pre>npm install --global staticland</pre>
       <pre>staticland register</pre>
       <pre>staticland site/ yourdomain.com</pre>
     </div>
+    <p>The staticland commandline tool requires <code>node</code> and <code>npm</code>, so make sure you've got <a href="https://nodejs.org">Node.js</a> installed.</p>
 
     <!-- <p><a href="https://docs.static.land">Read the staticland documentation & start publishing!</a></p> -->
   </div>
@@ -46,7 +47,28 @@
   </div>
 
   <div class="container mh3 pa4 m-auto">
-    <h2 class="f-subheadline f3 fw6 mt3">Usage</h2>
+    
+    <!-- Begin MailChimp Signup Form -->
+    <h2 class="f-subheadline f3 fw6 mt3">Learn more about staticland & the craft of building static sites</h2>
+    <p>We'll send occassional emails about changes to the static.land service, improvements to the underlying open source software, and guides to building static sites.</p>
+    <div id="mc_embed_signup">
+    <form action="//land.us9.list-manage.com/subscribe/post?u=4abe8136a2042972c51482cf3&amp;id=9aad36a293" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+
+    	<input type="email" value="" name="EMAIL" class="required email pa2" id="mce-EMAIL" placeholder="your email">
+      <input type="submit" value="Join the newsletter" name="subscribe" id="mc-embedded-subscribe" class="button pa2 bg-blue ba b--blue link white" style="cursor:pointer;">
+    	<div id="mce-responses" class="clear">
+    		<div class="response" id="mce-error-response" style="display:none"></div>
+    		<div class="response" id="mce-success-response" style="display:none"></div>
+    	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4abe8136a2042972c51482cf3_9aad36a293" tabindex="-1" value=""></div>
+        <div class="clear"></div>
+        </div>
+    </form>
+    </div>
+
+
+    <h2 class="f-subheadline f3 fw6 mt5">Usage</h2>
     <h3 class="f-subheadline f4 fw3 mt3">Create an account:</h3>
 
     <p>
