add header links

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       <a class="f3 fw3 mt0 c-red dark-gray no-underline hover-black pv2" href="https://static.land">staticland</a>
     </div>
     <div class="dtc v-mid tr pa3">
-      <!-- <a class="f6 fw4 hover-black no-underline dark-gray dn dib-ns pv2 ph3 hvr-border-gray" href="https://docs.static.land/get-started" >Get started</a> -->
-      <!-- <a class="f6 fw4 hover-black no-underline dark-gray dn dib-ns pv2 ph3 hvr-border-gray" href="https://docs.static.land" >Docs</a> -->
-      <a class="f6 fw4 hover-black no-underline dark-gray pv2 ph3 hvr-border-gray" href="https://github.com/staticland" >Github</a>
+      <a class="f6 fw4 hover-black no-underline dark-gray pv2 ph3 hvr-border-gray" href="https://docs.static.land">Docs</a>
+      <a class="f6 fw4 hover-black no-underline dark-gray pv2 ph3 hvr-border-gray" href="https://github.com/staticland">Github</a>
+      <a class="f6 fw4 hover-black no-underline dark-gray pv2 ph3 hvr-border-gray" href="https://app.static.land/login">Log in</a>
+      <a class="f6 fw4 hover-black no-underline dark-gray pv2 ph3 hvr-border-gray" href="https://app.static.land/register">Register</a>
     </div>
   </nav>
   </div>
