--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <li>Use the <b>open source code</b> to host a staticland server yourself. <a href="https://github.com/staticland">github.com/staticland</a></li>
     </ul>
     <h2 class="f-subheadline f3 fw6 mt5">Contact</h2>
-    <p>Send an email to <a href="http://sethvincent.com">Seth Vincent</a> at hi@static.land.</p>
+    <p>Send an email to hi@static.land.</p>
   </div>
 </div>
 </div>
