add id to header

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </div>
   <div class="bg-blue white">
     <div class="container mh5 pa4 mt5 m-auto">
-    <h2 class="f-subheadline f3 fw6 mt5">Using the hosted service & advanced usage</h2>
+    <h2 id="apply" class="f-subheadline f3 fw6 mt5">Using the hosted service & advanced usage</h2>
     <p>We have limited free access to the staticland hosted service to folks working on open source, non-profit, or education projects.</p>
     <p>We can also provide paid access to either the hosted version at static.land, or by setting up a private server for your organization.</p>
 
